--- a/cliente/index.html
+++ b/cliente/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html ng-app = "monedero">
   <head>
-    <title>Bootstrap 101 Template</title>
+    <title>Monedero Electronico</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="style.css" media="screen">
-
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/bootstrap-responsive.css" rel="stylesheet" media="screen">
+    <link href="css/bootstrap.min.css" rel="style.css" media="screen">
+    <link href="css/style.css" rel="stylesheet" media="screen">
        <script src="js/angular.min.js"> </script>
    <script src = "js/angular-route.min.js">
    </script>
@@ -20,7 +20,7 @@
 
     <div ng-controller = "menuCtrl">
 
-      <ul  class="nav nav-tabs">
+      <ul  class="nav nav-tabs nav-justified">
 
         <li ng-if = "items && location != '/' && location != ''" ng-repeat="item in items" ng-class="{active: isActive(item)}"><a href="#{{item.path}}">{{item.title}}</a></li>
 
@@ -33,9 +33,7 @@
 
     </div>
     <div ng-view>
-
     </div>
-
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
