--- a/cliente/index.html
+++ b/cliente/index.html
@@ -4,6 +4,8 @@
     <title>Monedero Electronico</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
+    <!-- favicon aqui -->
+    <link rel="icon" type="image/png" href="myicon.png">
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/bootstrap-responsive.css" rel="stylesheet" media="screen">
     <link href="css/bootstrap.min.css" rel="style.css" media="screen">
