--- a/cliente/index.html
+++ b/cliente/index.html
@@ -19,24 +19,39 @@
    <script src = "js/services.js"></script>
   </head>
   <body>
-
-    <div ng-controller = "menuCtrl">
-
-      <ul  class="nav nav-tabs nav-justified">
-
-        <li ng-if = "items && location != '/' && location != ''" ng-repeat="item in items" ng-class="{active: isActive(item)}"><a href="#{{item.path}}">{{item.title}}</a></li>
-
-      </ul>
-      <div ng-if = "location != '/' && location != ''" ><center><h3>{{nombre_sucursal}}</h3> </center></div>
-
-      <div class="alert alert-block" ng-if = "alertas.length > 0 && location != '/' && location != ''">
-        <center><b><a href = "#/alertas" >Hay ({{alertas.length}}) alerta(s) sin verificar </a></b></center>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Monedero</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href=""> <img width="40px" src="img/logo.png" alt=""> Cliente Distinguido</a>
       </div>
-
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div ng-controller = "menuCtrl">
+          <ul  class="nav navbar-nav">
+            <li ng-if = "items && location != '/' && location != ''" ng-repeat="item in items" ng-class="{active: isActive(item)}"><a href="#{{item.path}}">{{item.title}}</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li ><a id="salir" href="#/">Salir</a></li>
+          </ul>
+        </div>
+      </div>
+    </div> <!-- container fluid -->
+  </nav>
+  <div ng-if = "location != '/' && location != ''" >
+    <center><h3>{{nombre_sucursal}}</h3> </center>
+  </div>
+  <div class="alert alert-block" ng-if = "alertas.length > 0 && location != '/' && location != ''">
+    <center><b><a href = "#/alertas" >Hay ({{alertas.length}}) alerta(s) sin verificar </a></b></center>
+  </div>
+    <div ng-view id="cont">
     </div>
-    <div ng-view>
-    </div>
+    <img src="img/logo.png" alt="" class="ma">
     <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
